<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hawkes.fmc.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <GridLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/GridLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="9"
            android:orientation="horizontal"
            tools:context=".GridXMLActivity" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/server_host"
                android:layout_gravity="right"/>

            <EditText
                android:id="@+id/serverHostValue"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginRight="105dp"
                android:padding="10dp"
                android:ems="10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/server_port"
                android:layout_gravity="right"/>

            <EditText
                android:id="@+id/serverPortValue"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginRight="105dp"
                android:padding="10dp"
                android:ems="10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/user_name"
                android:layout_gravity="right"/>

            <EditText
                android:id="@+id/userNameValue"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginRight="105dp"
                android:padding="10dp"
                android:ems="10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/password"
                android:layout_gravity="right"/>

            <EditText
                android:id="@+id/passwordValue"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginRight="105dp"
                android:padding="10dp"
                android:ems="10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/first_name"
                android:layout_gravity="right"/>

            <EditText
                android:id="@+id/firstNameValue"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginRight="105dp"
                android:padding="10dp"
                android:ems="10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/last_name"
                android:layout_gravity="right"/>

            <EditText
                android:id="@+id/lastNameValue"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginRight="105dp"
                android:padding="10dp"
                android:ems="10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/email"
                android:layout_gravity="right"/>

            <EditText
                android:id="@+id/emailValue"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginRight="105dp"
                android:padding="10dp"
                android:ems="10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/gender"
                android:layout_gravity="right"/>

            <RadioGroup android:id="@+id/genderRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/radio_male"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:text="@string/male" />

                <RadioButton android:id="@+id/radio_female"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:text="@string/female" />

            </RadioGroup>


        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <Button android:id="@+id/button_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="20dp"
                android:text="@string/sign_in" />

            <Button android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/register" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
